kubernetes/deployment.yml
apiVersion: v1
kind: Namespace
metadata:
  name: "production"
  labels:
    zone: "production"
    name: "production"

---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "apm-server-deployment"
  namespace: "production"
  labels:
    zone: "production"
    name: "apm-backend"
spec:
  replicas: 1
  progressDeadlineSeconds: 300
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      zone: "production"
      name: "apm-backend"
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        zone: "production"
        name: "apm-backend"
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 60
      containers:
        - name: "apm-backend-service"
          image: "aragon/apm-serve:latest"
          imagePullPolicy: IfNotPresent
---
apiVersion: v1
kind: Service
metadata:
  name: apm-backend-service-svc
  namespace: "production"
  labels:
    name: "apm-backend"
    zone: "production"
spec:
  type: NodePort
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    name: "apm-backend"
    zone: "production"

---
apiVersion: v1
kind: Service
metadata:
  name: apm-backend-metrics
  namespace: "production"
  labels:
    name: "apm-backend"
    zone: "production"
spec:
  type: NodePort
  ports:
    - port: 3001
      targetPort: 3001
      protocol: TCP
  selector:
    name: "apm-backend"
    zone: "production"

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: apm-ingress
  namespace: "production"
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /prometeus
            backend:
              serviceName: apm-backend-metrics
              servicePort: 3001
          - path: /*
            backend:
              serviceName: apm-backend-service-svc
              servicePort: 3000
